# Simply2D

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
app/: CMakeLists.txt  SampleSprite.cpp  SampleSprite.h  context.cpp  level1.cpp  level1.h  level2.cpp  level2.h  sampleApp.cpp  sampleApp.h  sampleMenu.cpp  sampleMenu.h
app/Assets/scenes/level1/: Level1.json  Level1.tiled-session
cmake/: copy_dlls.cmake  utils.cmake
core/: CMakeLists.txt  app.cpp  app.h  pch.h  window.cpp  window.h
core/Include/: Simly2D.h  Simply2D.h  app.h  assets.h  handle.h  pool.h  renderer.h  resources.h  span.h  texture.h  window.h
core/Public/: animator.h  app.h  assets.h  bumpAllocator.h  components.h  gravity.h  handle.h  layer.h  memoryAllocator.h  motionQuantizer.h  pool.h  renderer.h  resources.h  scene.h  sprite.h  sprites.h  tileLayers.h  tileSet.h
core/Public/Animations/: animator.h
core/Public/Audio/: audio.h
core/Public/Base/: app.h  assets.h  layer.h  resources.h
core/Public/Events/: event.h  inputEvents.h  windowEvent.h
core/Public/Input/: KeyboardInput.h  MouseInput.h
core/Public/Math/: mathUtils.h
core/Public/Memory/: allocator.h  memory.h  memoryAllocator.h
core/Public/Rendering/: renderer.h
core/Public/Scene/: boundingArea.h  camera.h  gravity.h  grid.h  motionQuantizer.h  scene.h  sprite.h  tileLayers.h  tileSet.h
core/Public/Types/: Arrays.h  Deque.h  Function.h  HashMap.h  IDVector.h  Json.h  Set.h  SmartPointers.h  SparceSet.h  String.h  Utils.h  handle.h  mtRingBuffer.h  pool.h
core/Source/: animator.cpp  animatorManager.cpp  animatorManager.h  app.cpp  assetDataBase.cpp  assetDataBase.h  boundingArea.cpp  bumpAllocator.cpp  colisionChecker.cpp  colisionChecker.h  gameTime.cpp  gameTime.h  gravity.cpp  imageFilters.cpp  imageFilters.h  layer.cpp  memoryAllocator.cpp  memoryAllocator.h  motionQuantizer.cpp  mtJobSystem.cpp  mtJobSystem.h  mtRingBuffer.h  offsetAllocator.cpp  renderer_impl.cpp  renderer_impl.h  renderingBackend.cpp  renderingBackend.h  scene.cpp  sprite.cpp  sprites.cpp  threadPool.cpp  threadPool.h  tileLayers.cpp  tileSet.cpp  window_impl.cpp  window_impl.h
core/Source/Animation/: animator.cpp  animatorManager.cpp  animatorManager.h
core/Source/Audio/: audioImpl.cpp  audioImpl.h
core/Source/Base/: app.cpp  assetDataBase.cpp  assetDataBase.h  gameTime.cpp  gameTime.h  layer.cpp  threadPool.cpp  threadPool.h
core/Source/Memory/: allocator.cpp  bumpAllocator.cpp  memory.cpp  memoryAllocator.cpp  offsetAllocator.cpp
core/Source/Rendering/: clipper.cpp  clipper.h  renderingBackend.cpp  renderingBackend.h
core/Source/Scene/: boundingArea.cpp  camera.cpp  gravity.cpp  grid.cpp  motionQuantizer.cpp  scene.cpp  sprite.cpp  tileLayers.cpp  tileSet.cpp
core/Source/Systems/: colisionChecker.cpp  colisionChecker.h
core/ThridParty/rpmalloc/: CMakeLists.txt
core/renderer/: renderer.h
import/: CMakeLists.txt
import/json/: 8d8f.hash
